--- a/app/src/main/res/layout/activity_season.xml
+++ b/app/src/main/res/layout/activity_season.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -9,9 +10,21 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="net.djhurley.footballapp.SeasonActivity">
 
+    <Spinner
+        android:id="@+id/matchday_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:background="@android:color/darker_gray"/>
+
     <ListView
         android:id="@+id/fixture_list"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent">
-    </ListView>
-</RelativeLayout>
+        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"/>
+
+</LinearLayout>
